# blitzboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  prd.json
engine/: README.md  pyproject.toml
engine/blitz_engine/: __init__.py  cli.py  config.py  pipeline_bridge.py
engine/blitz_engine/backtest/: __init__.py  ablation.py  benchmark.py  drift.py  harness.py  metrics.py  predictors.py  stress.py
engine/blitz_engine/calibration/: __init__.py  gate.py  metrics.py  recal.py
engine/blitz_engine/data/: __init__.py
engine/blitz_engine/ensemble/: __init__.py  bma.py  market.py  members.py  stack.py
engine/blitz_engine/explain/: __init__.py  narrative.py  why.py
engine/blitz_engine/features/: __init__.py  discovery.py  drift.py  screening.py  store.py
engine/blitz_engine/graph/: __init__.py  ablation.py  archetypes.py  embeddings.py  gnn.py
engine/blitz_engine/inseason/: __init__.py  streaming.py  trade.py  waiver.py
engine/blitz_engine/lineup/: __init__.py  winprob.py
engine/blitz_engine/projection/: __init__.py  convergence.py  (+4 more)
engine/tests/: conftest.py  test_backtest.py  test_backtest_metrics.py  test_calibration.py  test_context.py  test_ensemble.py  test_explain.py  test_fa_penalty.py  test_factors.py  test_features.py  test_graph.py  test_ingest.py  test_inseason.py  test_latents.py  test_league_sim.py  test_lineup.py  test_mcts_policy.py  test_projection.py  test_reconcile.py  test_rl_policy.py  test_roster_solver.py  test_simulation.py  test_smoke.py  test_sources.py  test_survival.py  test_talent.py  test_validation.py  test_value_equity.py
(+542 files in other folders)
